# Job-Listing-Scraper-AI

./: GenAI_RAG_LangChain_Job_Matching_Proposal.docx  main.py  pyproject.toml
app/scrapers/: create_session.py  scrape_jobs.py  test_scrape_jobs.py
app/scrapers/linkedin_scraper/: __init__.py
app/scrapers/linkedin_scraper/models/: __init__.py
app/scrapers/linkedin_scraper/scrapers/: __init__.py  job_search.py
