[project]
name = "job-listing-scraper-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "feedparser>=6.0.12",
    "ipykernel>=7.3.0",
    "openai>=2.45.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
